force-app/main/default/objects/GDICOE_Job_Posting_Template__c/GDICOE_Job_Posting_Template__c.object-meta.xml
<CustomObject>
    <label>GDICOE Job Posting Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GDICOE Job Posting Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>