force-app/main/default/objects/GDICOE_Job_Posting_Template__c/fields/ApplyLink__c.field-meta.xml
<CustomField>
    <fullName>ApplyLink__c</fullName>
    <label>ApplyLink</label>
    <length>120</length>
    <type>Text</type>
</CustomField>