force-app/main/default/objects/GDICOE_Job_Posting_Template__c/fields/CssText__c.field-meta.xml
<CustomField>
    <fullName>CssText__c</fullName>
    <label>CssText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>