force-app/main/default/objects/GDICOE_Job_Posting_Template__c/fields/HtmlText__c.field-meta.xml
<CustomField>
    <fullName>HtmlText__c</fullName>
    <label>HtmlText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>