force-app/main/default/objects/GDICOE_Job_Posting_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HtmlText__c</columns>
    <columns>CssText__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>